# sandstorm

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  Makefile  Platforms.cpp  Platforms.h  README.md  Sandstorm.cpp  Sandstorm.h  Sprite.h  main.cpp  util.cpp  util.h
img/: cat.xcf  joe.xcf  warning.xcf
